syntax = "proto3";

package passport;

import "ret.proto";
import "model.proto";
import "errmsg.proto";

option go_package="github.com/qsock/qim/lib/proto/passport";

service Passport {
  rpc Ping (ret.NoArgs) returns (ret.NoArgs) {}

  // 发送手机短信
  rpc Sms(SmsReq) returns (ret.EmptyResp) {}
  rpc TelLogin(TelLoginReq) returns (LoginResp) {}
  rpc Qqlogin(QqloginReq) returns (LoginResp) {}
  rpc WxLogin(WxLoginReq) returns (LoginResp) {}

  // 鉴权
  rpc Auth (AuthReq) returns(ret.IntResp) {}
  rpc Refresh(RefreshReq) returns (ret.StringResp) {}
  rpc Logout (LogoutReq) returns (ret.EmptyResp) {}

  rpc Ban(BanReq) returns (ret.EmptyResp) {}
  rpc UnBan(UnBanReq) returns (ret.EmptyResp) {}
}

message LoginResp {
  errmsg.ErrMsg err=1;
  // 用户auth信息
  model.UserAuth auth=2;
}

message SmsReq {
  // 手机号
  string tel=1;
}

message SmsModel {
  // 验证码
  string code=1;
  // 创建时间
  int64 created_on=2;
}

// 手机短信登陆
message TelLoginReq {
  //  忽略
  model.RequestMeta meta=1;
  // 手机号
  string tel=2;
  // 验证码
  string code=3;
}

// qq登陆
message QqloginReq {
  //  忽略
  model.RequestMeta meta=1;
  // qq返回的accesstoken
  string token=2;
  // qq返回的openid
  string openid=3;
}

// 微信登陆
message WxLoginReq {
  //  忽略
  model.RequestMeta meta=1;
  // 微信登陆的code
  string code=2;
}

message RefreshReq {
  //  忽略
  model.RequestMeta meta=1;
  string token=2;
  // refresh_token
  string refresh_token=3;
}

message LogoutReq {
  //  忽略
  model.RequestMeta meta=1;
}

message AuthReq {
  model.RequestMeta meta=1;
  string token=2;
}

message JwtClaims {
  model.Device device=1;
  int64 user_id=2;
  string user_ip=3;
  int64 seq_id=4;
}

message BanReq {
  int64 user_id=1;
  int64 end_on=2;
}

message UnBanReq {
  int64 user_id=1;
}